Wed Dec 22 06:53:30 2004  Chad Elliott  <elliott_c@ociweb.com>

        * tests/CIDL/CodeGen/CodeGen.mpc:

          Make sure that CodeGen_stub gets built before CodeGen_exec.

Tue Dec 21 11:29:03 2004  Gan Deng <gan.deng@vanderbilt.edu>

        * tools/Segment_Timer/Segment_Timer.h

          Increased the value of the macro MAX_READINGS, since the
          current value is too small and caused core dump for even
          50 connections. Thanks Roland Schmmack <Roland.Schimmack@gmx.de>
          for reporting this bug!

Mon Dec 20 17:27:01 2004  Gan Deng <gan.deng@vanderbilt.edu>

        * DAnCE/ciao/CCM_Core.mpc
        * ciao/Deployment_Core.idl
        * ciao/NodeApplication_Impl.cpp
        * ciao/NodeApplication_Impl.h
        * ciao/NodeApplication_Impl.inl

          Reverted changes back because of the check-in mistake I just made.

Mon Dec 20 16:32:54 2004  Nanbor Wang  <nanbor@cse.wustl.edu>

        * DAnCE/Config_Handlers/Config_Handlers.mpc: Added include path to
          self for XSC_Config_Handlers project..

Wed Dec 15 13:48:44 2004  Chad Elliott  <elliott_c@ociweb.com>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Get rid of build warnings from gcc 3.3.

Tue Nov 30 21:41:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp (namespace):

          More use of ACE_NEW_THROW_EX instead of ACE_NEW_RETURN.

Tue Nov 30 21:03:00 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp (namespace):

          Another use of ACE_NEW_THROW_EX instead of ACE_NEW_RETURN.

Tue Nov 30 20:39:26 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp (namespace):

          Used ACE_NEW_THROW_EX instead of ACE_NEW_RETURN.

Tue Nov 30 20:22:19 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp (namespace):

          Fixes for VC6.
